160608
	extras.c
		cooperative multi-tasking: (process) (run) (stop) (pause)
		USER 0 is #TASK
160603
	vm.c
		do NOT reset dict search order on error
	extras.c
		added ficl-os, portable key/key?/ekey, utime
		simple FFI (c-call), (callback)
		DLL (dlopen), (dlsym)
	ficlplatform/unix.c
		added ms
	softcore/missing.fs
		/string fixed again, darwin?/linux?/winnt?
	system.c, main.c
		moved ficlSystemCompileExtras() to system.c (missing.fs needs it)
	Makefile.darwin, Makefile.linux*, Makefile.mingw
		added curterm.o
160510
	softcore/tester.fr,struct.fth
		J.Hayes tester.  OpenFirmware struct.
160509
	user/safer-oof.fs
		C.Jakeman's extensions for mini-oof.fs
160507
	vm.c
		ficlVmInnerLoop longjmp() fix
	softcore/strarray.fs
		string handling words added	
	softcore/mini-oof.fs
		B.Paysan Mini-OOF, replaced FiCL OO
	wordlist.txt
		words defined in FiCL
	glossary.txt
		softcore help V1.0
	user/ficlex.fs,jakeman.fs
		added examples
160422
	ficllocal.h
		added FICL_WANT_EXTENDED_PREFIX, 32K default dict size
	ficlplatform/unix.h
		Darwin platform/arch string
	softcore/makefile
		-m32 flag added
	softcore
		changed back to original softcore layer + additions
	Makefile.darwin
		changed CC to gcc, removed -s flag
	glossary.txt
	words
150526
	softcore patches: included circ-pad/missing/strarray/numcvt

150509
	Makefile.darwin
	primitives.c
		env queries "stack-cells", "return-stack-cells" fixed
		"/data-cells" added to return the size of the dict
150507
	Makefile.mingw
		clobber target to delete ficl.exe
	extras.c
		include <io.h> for getcwd
150506
	Darwin
		compile it with gcc-apple-4.2
150429
	extras.c
		GET-MSECS ( -- n )
	Makefile.linux-ppc
	user/mentink.fs
	user/utils.fs: .b .d .h counter timer timer-reset .elapsed
130626
	ficlplatform/mingw32.c
		KEY ( -- ch )
		KEY? ( -- flag )
		EKEY ( -- code )
		PAGE ( -- )
		MS ( msec -- )

		AT ( y x -- )
		AT? ( -- y x )
		FORM ( -- h w )

		SET-COLORS ( background foreground -- )
		GET-COLORS ( -- background foreground )
