@@ -15,8 +15,8 @@ RANLIB = ranlib
 MAJOR = 4
 MINOR = 0.31
 
-ficl: main.o $(HEADERS) libficl.a
-	$(CC) main.o -o ficl -L. -lficl -lm
+ficld.exe: main.o $(HEADERS) libficl.a
+	$(CC) main.o -o $@ -L. -lficl -lm
 
 lib: libficl.so.$(MAJOR).$(MINOR)
 
@@ -58,4 +58,5 @@ clean:
 	rm -f *.o *.a libficl.*
 
 clobber: clean
-	rm -f ficl
+	rm -f ficld.exe
+
