@@ -14,8 +14,8 @@ STATIC =
 MAJOR = 4
 MINOR = 0.31
 
-ficl: main.o $(HEADERS) libficl.a
-	$(CC) $(OPT) $(STATIC) main.o -o ficl -L. -lficl -lm
+ficll.exe: main.o $(HEADERS) libficl.a
+	$(CC) $(OPT) $(STATIC) main.o -o $@ -L. -lficl -lm
 
 lib: libficl.so.$(MAJOR).$(MINOR)
 
@@ -55,3 +55,7 @@ unix.o: ficlplatform/unix.c $(HEADERS)
 #
 clean:
 	rm -f *.o *.a libficl.*
+
+clobber: clean
+   rm -f ficll.exe
+
